<resources>
    <string name="facebook_app_id">841107499390440</string>
    <string name="fb_login_protocol_scheme">fb841107499390440</string>
    <string name="app_name">Cardline</string>
    <string name="newsfeed">뉴스피드</string>
    <string name="studio">스튜디오</string>
    <string name="my_editor_page">내 에디터 페이지</string>
    <string name="more_settings">더보기</string>
    <string name="information">정보</string>
    <string name="alert">알림</string>
    <string name="favorite_list">즐겨찾기 목록</string>
    <string name="settings">설정</string>
    <string name="open_source_license">오픈소스 라이센스</string>

    <string name="today_suggestion">오늘의 추천</string>
    <string name="politics">정치</string>
    <string name="entertainment">연예</string>
    <string name="science_technology">과학 기술</string>
    <string name="it_technology">IT / 산업</string>
    <string name="daily_life_review">생활 / 리뷰</string>
    <string name="movie_music">영화 / 음악</string>
    <string name="dog_cat">멍 / 냥</string>
    <string name="comic_animation">만화 / 애니</string>
    <string name="cooking">요리</string>

    <!-- EditorView -->
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">취소</string>
    <string name="label_ok">네</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>

    <string name="close_text">카드뉴스 작성을 취소</string>
    <string name="background_resource">background_resource.png</string>
    <string name="input">텍스트 편집</string>
</resources>
