<layout>

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:scrollbarSize="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/newsfeed_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_black_selector"
                android:padding="@dimen/button_top_padding"
                android:src="@drawable/btn_feed_search" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_today_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/today_suggestion"
                android:textStyle="bold"
                app:enableGradient="true"
                app:fullMode="true"
                app:gradientEndColor="@color/mainGradientEndColor"
                app:gradientStartColor="@color/mainGradientStartColor" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/politics"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/entertainment"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_science_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/science_technology"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_it_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/it_technology"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_life_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/daily_life_review"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_movie_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/movie_music"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/dog_cat"
                android:textStyle="bold" />


            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_comic_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/comic_animation"
                android:textStyle="bold" />

            <kr.edcan.cardline.views.CartaTagView
                android:id="@+id/newsfeed_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/cooking"
                android:textStyle="bold" />
        </LinearLayout>

    </HorizontalScrollView>
</layout>